<resources>
    <string name="app_name">NoteTakingAppOne</string>
    <string name="app_title">Note Me</string>
    <string name="new_text">New</string>
    <string name="update_text">Update</string>
    <string name="delete_text">Delete</string>
    <string name="make_notes">Make Notes</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="insert">Insert</string>
    <string name="back">Back</string>
    <string name="your_note">Your Note</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="search">search</string>
    <string name="create">Create</string>
    <string name="note_title">Note Title</string>
    <string name="note_content_goes_here_this_is_a_sample_note">Note content goes here. This is a sample note.</string>
    <string name="add_btn">add_btn</string>
</resources>